--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.19.3",
     "axios": "^0.26.1",
+    "bcryptjs": "^2.4.3",
+    "brcypt": "^1.0.1",
+    "crypto-js": "^4.1.1",
     "date-fns": "^2.28.0",
     "hi": "^0.0.0",
     "react": "^17.0.2",
