--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
+    "tableau-react": "^2.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
