--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "crypto-js": "^4.1.1",
     "date-fns": "^2.28.0",
     "hi": "^0.0.0",
+    "powerbi-client-react": "^1.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
