--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "powerbi-client-react": "^1.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
