--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.28.0",
     "hi": "^0.0.0",
     "powerbi-client-react": "^1.3.3",
+    "rc-queue-anim": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
