--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "hi": "^0.0.0",
     "powerbi-client-react": "^1.3.3",
     "rc-queue-anim": "^2.0.0",
+    "rc-scroll-anim": "^2.7.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
